Quickfix: ensure overlay text is invisible in mobile

--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -37,15 +37,25 @@
 }
 
 .slider__overlay {
+  display: none;
   text-align: center;
 
+  h1,
+  h2 {
+    display: none;
+  }
+
   @media only screen and (min-width: $tablet-breakpoint) {
+    display: block;
+
     h1 {
+      display: block;
       font-size: 5.2rem;
       margin: 0;
     }
 
     h2 {
+      display: block;
       font-size: 3.6rem;
       margin: 0;
     }
